# PyYandexLMS

./: .deepsource.toml  .gitignore  .readthedocs.yml  README.md  pyproject.toml
.github/: FUNDING.yml
PyYandexLMS/: errors.py  models.py
PyYandexLMS/asynchronous/: client.py
PyYandexLMS/models/: base.py  comment.py  course.py  file.py  group.py  input.py  invite.py  layout.py  lesson.py  materials.py  notification.py  notifications.py  placement.py  problem.py  profile.py  progress.py  resource.py  schedule_plan.py  shedule_plan.py  solution.py  status.py  submission.py  tag.py  task.py  user.py  variant.py  verdict.py
PyYandexLMS/models/base/: lesson.py  material.py  profile.py  solution.py  task.py
PyYandexLMS/synchronous/: client.py
PyYandexLMS/utils/: link_generator.py  validation.py
docs/: conf.py  index.rst  install.rst  requirements.txt
docs/synchronous/: index.rst  synchronous.client.rst  synchronous.rst
docs/templates/: module.rst_t  package.rst_t  toc.rst_t
docs/types/: index.rst  models.base.lesson.rst  models.base.main.rst  models.base.material.rst  models.base.profile.rst  models.base.rst  models.base.solution.rst  models.base.task.rst  models.comment.rst  models.course.rst  models.file.rst  models.group.rst  models.invite.rst  models.lesson.rst  models.materials.rst  models.notification.rst  models.placement.rst  models.profile.rst  models.progress.rst  models.rst  models.schedule_plan.rst  models.shedule_plan.rst  models.solution.rst  models.status.rst  models.submission.rst  models.tag.rst  models.task.rst  models.user.rst  models.variant.rst  models.verdict.rst  schedule_plan_item.rst
docs/utils/: index.rst  utils.rst  utils.validation.rst
examples/asynchronous/: sample.py
examples/synchronous/: coures.py  sample.py
tests/: .gitignore
tests/synchronous/: test_client.py
