[tool.poetry]
name = "PyYandexLMS"
version = "0.1.0"
description = ""
authors = ["lav. <me@lavn.ml>"]
readme = "README.md"
homepage = "https://github.com/fast-geek/PyYandexLMS"
repository = "https://github.com/fast-geek/PyYandexLMS"
keywords = ["yandex-lyceum", "aiohttp", "requests", "pydantic"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
aiohttp = "^3.8.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
