[tool.poetry]
name = "PyYandexLMS"
version = "0.3.4"
description = "📡 Python API wrapper для LMS Яндекса с синхронными и асинхронными методами"
authors = ["lav. <me@lavn.ml>"]
readme = "README.md"
homepage = "https://github.com/fast-geek/PyYandexLMS"
repository = "https://github.com/fast-geek/PyYandexLMS"
keywords = ["yandex-lyceum", "aiohttp", "requests", "pydantic"]
packages = [
    { include = "PyYandexLMS" },
    { include = "PyYandexLMS/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
aiohttp = "^3.8.1"
requests = "^2.27.1"

Sphinx = { version = "^4.2.0", optional = true }
sphinx-intl = { version = "^2.0.1", optional = true }
sphinx-autobuild = { version = "^2021.3.14", optional = true }
sphinx-copybutton = { version = "^0.5.0", optional = true }
furo = { version = "^2022.4.7", optional = true }
sphinx-prompt = { version = "^1.5.0", optional = true }
Sphinx-Substitution-Extensions = { version = "^2020.9.30", optional = true }
towncrier = { version = "^21.9.0", optional = true }
pygments = { version = "^2.4", optional = true }
pymdown-extensions = { version = "^9.3", optional = true }
markdown-include = { version = "^0.6", optional = true }
Pygments = { version = "^2.11.2", optional = true }
m2r2 = { version = "^0.3.2", optional = true }

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
requests-mock = "^1.9.3"
hypothesis = "^6.46.10"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-intl",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "furo",
    "black",
    "sphinx-prompt",
    "Sphinx-Substitution-Extensions",
    "towncrier",
    "pygments",
    "pymdown-extensions",
    "markdown-include",
    "m2r2"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
